unpackaged/main/default/objects/litify_ext__IME__c/litify_ext__IME__c.object-meta.xml
<CustomObject>
    <label>IME</label>
    <nameField>
        <displayFormat>IME-{0000}</displayFormat>
        <label>IME Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IME</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>