unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Case_Status_Client__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Case_Status_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Status Client</label>
    <type>Checkbox</type>
</CustomField>