unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Contents_of_IME_Report__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Contents_of_IME_Report__c</fullName>
    <label>Contents of IME Report</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>