unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Date_of_IME__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Date_of_IME__c</fullName>
    <label>Date of IME</label>
    <type>Date</type>
</CustomField>