unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Date_Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>