unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Deposition_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Date__c</fullName>
    <label>Deposition Date</label>
    <type>Date</type>
</CustomField>