unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Deposition_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Date_Time__c</fullName>
    <label>Deposition Date/Time</label>
    <type>DateTime</type>
</CustomField>