unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Deposition_Needed__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Needed__c</fullName>
    <label>Deposition Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>