unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Deposition_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Time__c</fullName>
    <label>Deposition Time</label>
    <type>Time</type>
</CustomField>