unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Hired_By__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Hired_By__c</fullName>
    <label>Hired By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Intervenor</fullName>
            </value>
            <value>
                <fullName>Maker</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Next Friend</fullName>
            </value>
            <value>
                <fullName>Petitioner</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Respondent</fullName>
                <default>true</default>
                <label>Respondent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>