unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__IME_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__IME_Date_Time__c</fullName>
    <description>Possibly used for conversion - review for deleteion - separate date time fields should be used.</description>
    <inlineHelpText>Do not use</inlineHelpText>
    <label>IME Date/Time</label>
    <type>DateTime</type>
</CustomField>