unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__IME_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__IME_Type__c</fullName>
    <label>IME Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Med Records Only</fullName>
            </value>
            <value>
                <fullName>Records &amp; Bills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>