unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>IME</relationshipLabel>
    <relationshipName>IME</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>