unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Matter_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Matter_Display_Name__c</fullName>
    <formula>litify_ext__Matter__r.litify_pm__Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Display Name</label>
    <type>Text</type>
</CustomField>