unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Provider__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IME</relationshipLabel>
    <relationshipName>IME</relationshipName>
    <type>Lookup</type>
</CustomField>