unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Provider_Name__c</fullName>
    <description>Lookup for Provider Name via the roll</description>
    <formula>&#39;&#39;</formula>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>