unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Reschedule_From__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Reschedule_From__c</fullName>
    <label>Reschedule From</label>
    <type>Date</type>
</CustomField>