unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rescheduled</label>
    <type>Checkbox</type>
</CustomField>