unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Time_of_IME__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Time_of_IME__c</fullName>
    <label>Time of IME</label>
    <type>Time</type>
</CustomField>