unpackaged/main/default/objects/litify_ext__IME__c/fields/litify_ext__Time_of_IME_Print__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Time_of_IME_Print__c</fullName>
    <description>generates a printable text value of the ime time</description>
    <formula>IF (ISBLANK( litify_ext__Time_of_IME__c), &quot;&quot;,
TEXT(IF(HOUR(litify_ext__Time_of_IME__c) &lt;= 12, HOUR(litify_ext__Time_of_IME__c) , (HOUR(litify_ext__Time_of_IME__c) -12) ))
&amp; &quot;:&quot; &amp; LPAD(TEXT(MINUTE(litify_ext__Time_of_IME__c)),2,&#39;0&#39;) &amp; IF (HOUR(litify_ext__Time_of_IME__c) &lt; 12, &quot; AM&quot;, &quot; PM&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time of IME Print</label>
    <type>Text</type>
</CustomField>